# MiniChat

./: .gitignore  LICENSE  README.md
ChatServer1/: .clang-format  AsioIOServicePool.cc  CMakeLists.txt  CServer.cc  CServer.h  CSession.cc  CSession.h  ChatServer.cc  ChatServiceImpl.h  ConfigMgr.cc  LogicSystem.cc  LogicSystem.h  MsgNode.cc  MsgNode.h  MysqlConPool.cc  MysqlDao.cc  MysqlDao.h  MysqlMgr.h  StatusGrpcClient.cc  StatusGrpcClient.h  UserMgr.cc  UserMgr.h  config.ini  data.h  global.h  message.proto
ChatServer1/LINUX/: message.pb.h
ChatServer1/WIN32/: message.grpc.pb.h
Client/MiniChat/: MiniChat.pro  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  chatview.cpp  chatview.h  clickbtn.cpp  clickbtn.h  clickedlabel.cpp  clickedlabel.h  customizeedit.cpp  customizeedit.h  global.h  httpmgr.cpp  httpmgr.h  listitembase.cpp  listitembase.h  loadingdialog.cpp  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagetextedit.cpp  messagetextedit.h  picturebubble.cpp  (+17 more)
Client/MiniChat/style/: stylesheet.qss
Server/: .clang-format  AsioIOServicePool.h  CMakeLists.txt  CServer.cc  CServer.h  ConfigMgr.cc  ConfigMgr.h  GateServer.cc  HttpConnection.cc  HttpConnection.h  LogicSystem.cc  LogicSystem.h  MysqlConPool.h  MysqlDao.h  MysqlMgr.cc  RedisConPool.cc  RedisConPool.h  RedisMgr.cc  Singleton.h  StatusGrpcClient.cc  StatusGrpcClient.h  VerifyGrpcClient.cc  VerifyGrpcClient.h  config.ini  global.h  message.proto
Server/LINUX/: message.pb.cc  message.pb.h
Server/Test/: test.http
Server/example/mysqlx_example/: CMakeLists.txt  main.cc
Server/example/parse_json_example/: CMakeLists.txt
Server/example/read_config_exapmle/: ConfigMgr.cc  ConfigMgr.h  config.ini  main.cc
Server/example/redis_expamle/: CMakeLists.txt  main.cc
Server/example/redis_mgr_example/: CMakeLists.txt  config.ini  main.cc
StatusServer/: .clang-format  AsioIOServicePool.cc  CMakeLists.txt  ConfigMgr.cc  MysqlConPool.h  MysqlDao.cc  MysqlMgr.cc  MysqlMgr.h  RedisConPool.h  RedisMgr.h  Singleton.h  StatusServer.cc  StatusServiceImpl.cc  StatusServiceImpl.h  config.ini  global.h
StatusServer/LINUX/: message.grpc.pb.h  message.pb.cc
VerifyServer/: config.js  config.json  email.js  global.js  package-lock.json  package.json  proto.js  redis.js  server.js
server_rust/: Cargo.toml  config.ini
server_rust/examples/: http.rs
server_rust/http/: Cargo.toml
server_rust/http/src/: lib.rs
server_rust/src/: main.rs
server_rust/utils/: Cargo.toml
server_rust/utils/src/: lib.rs  read_ini.rs
verify_server_rust/: .env  Cargo.toml  build.rs
verify_server_rust/examples/: proto_exp.rs  read_config.rs  send_email.rs
verify_server_rust/src/: config.rs  email.rs  global.rs  lib.rs  main.rs  proto.rs  redis.rs
