[package]
name = "server_rust"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["utils", "http"]

[dependencies]
utils = { path = "./utils" }
http = { path = "./http" }

# 异步 运行时
tokio = { version = "1", features = ["full"] }
# 日志
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [] }
# 序列化
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# 网络库
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = "0.1.3"
