[package]
name = "verify_server_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
async-stream = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
diesel = { version = "2", features = ["mysql"] }
dotenvy = "0.15.7"
url = "2.5.4"
redis = { version = "0.29.1", features = [
    "tokio-comp",
    "r2d2",
    "tokio-native-tls-comp",
] }
lettre = { version = "0.11.15", features = [
    "tokio1",
    "tokio1-rustls",
    "ring",
    "webpki-roots",
    "rustls-tls",
    "rustls-native-certs",
    "tokio1-native-tls",
] }
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tracing = "0.1.41"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "*"
